crates/gql_codegen_core/tests/compat/snapshots/compat__operations-default@operations-default.json.snap
---
source: crates/gql_codegen_core/tests/compat/main.rs
expression: output
input_file: crates/gql_codegen_core/tests/compat/cases/typescript-operations/operations-default.json
---
export type CreateUserMutation = {
  __typename?: 'Mutation';
  createUser: {
    __typename?: 'User';
    id: Scalars['ID']['output'];
    name: Scalars['String']['output'];
  };
};

export type CreateUserMutationVariables = {
  input: CreateUserInput;
};

export type GetUserQuery = {
  __typename?: 'Query';
  user?: {
    __typename?: 'User';
    id: Scalars['ID']['output'];
    name: Scalars['String']['output'];
    email?: Maybe<Scalars['String']['output']>;
  };
};

export type GetUserQueryVariables = {
  id: Scalars['ID']['input'];
};

export type GetUsersQuery = {
  __typename?: 'Query';
  users: {
    __typename?: 'User';
    id: Scalars['ID']['output'];
    name: Scalars['String']['output'];
  };
};
