crates/gql_codegen_core/tests/compat/snapshots/compat__operations-with-fragments@operations-with-fragments.json.snap
---
source: crates/gql_codegen_core/tests/compat/main.rs
expression: output
input_file: crates/gql_codegen_core/tests/compat/cases/typescript-operations/operations-with-fragments.json
---
export type GetUserWithFragmentsQuery = {
  __typename?: 'Query';
  user?: {
    __typename?: 'User';
    id: Scalars['ID']['output'];
    name: Scalars['String']['output'];
    email?: Maybe<Scalars['String']['output']>;
    posts: {
      __typename?: 'Post';
      id: Scalars['ID']['output'];
      title: Scalars['String']['output'];
      body: Scalars['String']['output'];
    };
  };
};

export type GetUserWithFragmentsQueryVariables = {
  id: Scalars['ID']['input'];
};

export type PostFieldsFragment = {
  __typename?: 'Post';
  id: Scalars['ID']['output'];
  title: Scalars['String']['output'];
  body: Scalars['String']['output'];
};

export type UserFieldsFragment = {
  __typename?: 'User';
  id: Scalars['ID']['output'];
  name: Scalars['String']['output'];
  email?: Maybe<Scalars['String']['output']>;
};
